--- a/covid-api/build.gradle
+++ b/covid-api/build.gradle
@@ -23,6 +23,12 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	testImplementation "org.testcontainers:testcontainers:1.17.6"
+  	testImplementation "org.testcontainers:junit-jupiter:1.17.6"
+  	testRuntimeOnly 'com.h2database:h2'
+
+
 }
 
 tasks.named('test') {
